--- a/decodedata/text.html
+++ b/decodedata/text.html
@@ -2,5 +2,6 @@
 
 {% block announce %}
   <!-- Add announcement here, including arbitrary HTML -->
-  <p class="my-owm-announcement">This page is in construction</p>
+  <p class="my-owm-announcement">This page is under construction</p>
 {% endblock %}
+
