--- a/decodedata/overrides/main.html
+++ b/decodedata/overrides/main.html
@@ -5,3 +5,21 @@
   <p class="my-owm-announcement">This page is under construction</p>
 {% endblock %}
 
+{% block libs %}
+    {{ super() }}
+    <script src="{{ base_url }}/js/somelib.js"></script>
+{% endblock %}
+
+
+{% block content %}
+{{ super() }}
+<!--<ul>
+  {% for toc_item in page.toc %}
+      <li><a href="{{ toc_item.url }}">{{ toc_item.title }}</a></li>
+      {% for toc_item in toc_item.children %}
+          <li><a href="{{ toc_item.url }}">{{ toc_item.title }}</a></li>
+      {% endfor %}
+  {% endfor %}
+  </ul>-->
+  Content from main.html
+  {% endblock %}
